# prizolov-agent-os

./: .env  .env.example  .gitignore  LICENSE  README.md  demo.py  main.py  prizolov_director.py  pyproject.toml  pytest.ini  rag_architecture.md  requirements.txt  setup.py
agents/: base_agent.py  echo_agent.py  sample_agent.py
cli/: main.py
core/: context.py  director.py  execution.py  meta.py  orchestrator.py
docs/: architecture.md
examples/: content_empire_demo.py  seo_agent.py
memory/: memory_system.py
prizolov_os/: __init__.py  agent.py  config.py  kernel.py  logging_config.py
prizolov_os/agents/: research_agent.py  writer_agent.py
prizolov_os/core/: kernel.py  orchestrator.py
prizolov_os/memory/: __init__.py  memory.py
prizolov_os/protocols/: awenating.py
tests/: __init__.py  test_agent.py  test_kernel.py  test_memory.py  test_orchestrator.py
