# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prizolov-os"
version = "0.2.0.dev0"  # Пре-релиз версия для разработки
description = "Agentic AI Operating System for autonomous business orchestration"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Dm.Andreyanov", email = "contact@prizolov.ru" }
]
maintainers = [
    { name = "Dm.Andreyanov", email = "contact@prizolov.ru" }
]
keywords = ["ai", "agents", "rag", "orchestration", "sovereign-ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Базовые зависимости
dependencies = [
    "typing-extensions>=4.0.0",
    "python-dotenv>=1.0.0",
]

# Опциональные зависимости
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.10.0",
    "tiktoken>=0.5.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]
all = [
    "prizolov-os[dev]",
    "prizolov-os[rag]",
    "prizolov-os[llm]",
    "prizolov-os[api]",
]

# Скрипты командной строки
[project.scripts]
prizolov = "cli.main:main"

# Метаданные для URL
[project.urls]
Homepage = "https://github.com/GIBDD-DPS/prizolov-agent-os"
Documentation = "https://prizolov-os.readthedocs.io"
Repository = "https://github.com/GIBDD-DPS/prizolov-agent-os"
Issues = "https://github.com/GIBDD-DPS/prizolov-agent-os/issues"
Changelog = "https://github.com/GIBDD-DPS/prizolov-agent-os/blob/main/CHANGELOG.md"

# Настройки инструментов
[tool.setuptools.packages.find]
where = ["."]
include = ["prizolov_os*", "cli*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S"]
ignore = ["ANN101", "ANN102", "S101"]  # Исключения для self/cls и assert

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Неиспользуемые импорты в __init__
"tests/*.py" = ["S101", "ANN"]  # Тесты: разрешить assert и без аннотаций

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
